--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 	Spatial by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-    Modified and re-coding by Bryan Tong (btong.me) for personal use.
+	Modified and re-coding by Bryan Tong (btong.me) for personal use.
 -->
 <html>
 	<head>
@@ -36,14 +36,11 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-                        			<li><a href="http://blog.btong.me/">Blog</a></li>
+						<!--<li><a href="http://blog.btong.me/">Blog</a></li>-->
 						<li><a href="bio.html">About</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="cs61a.html">CS61A</a></li>					
 						<li><a href="index.html#contact">Contact</a></li>
-                       	<!-- Removed for now.
-                        <li><a href="about.html">About</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-                        -->
 					</ul>
 				</nav>
 			</header>
@@ -51,42 +48,62 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>About Me</h2>
-				<p>A little background and personal insight</p>
+				<p>Some background and summary</p>
 			</section>
 
 		<!-- Main -->
 			<section id="main" class="wrapper">
 				<div class="container">
+                        <p><i>Hey there!</i></p>
+                        <p><strong>My Background</strong><br />
+						I'm Bryan, a Bay Area native and current student at the University of California, Berkeley.
+                        I'm pursuing a double major in Cognitive Science, focused in Human-Computer interaction, and Legal Studies.
+                        In layman's terms, I'm hoping to learn a lot of computer science and psychology-related things before I pursue an eventual MBA.  Living and working in the local tech community is my dream, though I might end up
+                        just running a boba cafe in SF.</p>
+                        <a href="#" class="image fit"><img src="images/pic01.png" alt="Some photos of me!"/></a> 
+                        <p>
+                        A frequent question I get is about my ethnicity - though my last name is Chinese, 
+                        I am actually multiethnic: a mix of Chinese, Japanese, and German.
+                        I speak English and informal Japanese, though there are so many other languages I want to learn!
+                        Traveling to not only embrace my roots - but to explore other cultures is a huge interest of mine.
+                        I've flown a lot growing up.  I've traveled to most US states and even drove straight to Texas! Internationally, I've visited: Italy, Spain, Germany, UK, Croatia, and Japan.</p>
 
-					<header class="major special">
-						<p>My background</p>
-					</header>
+                        <p><strong>My Education</strong><br />
+                        Until my sophmore year of high school, I was homeschooled and educated by my mother, whom retired from radiology
+                        to homeschool my sister and I.  Though unconventional, it allowed me to cover standard subjects while exploring
+                        a variety of interests - computers, cars, nature - to a greater degree before the SATs rolled around.
+                        By then, I chose to transfer into public school and wound up now at UC Berkeley.
+                        I get asked often if traditional or homeschooling is better.  Though public school prepared me for standardized
+                        testing and contributed to my academic history, homeschooling and my fantastic parents shaped much of my character
+                        in a healthier, encouraging environment.  I've tried my best to synthesize the positive aspects of both backgrounds of education.  Parents are often curious of this, so feel free to contact me about it.  I'm hoping it pays off!</p>
 
-					<!-- <a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a> -->
-                        <p>Hey there!  I'm a California native, born and raised in the Bay Area.
-                        Though my last name is Chinese, I am actually a mix of Chinese, Japanese, and German.
-                        I speak English and Japanese, though there are many other languages I wish to learn.
-                        (This seems to be what most people are curious about.)</p>
-                        <p>Originally homeschooled most of my life, I (for whatever reason)
-                        chose to change into public school and ended up here - UC Berkeley.
-                        I am currently studying Cognitive Science with a specialization in Human-Computer Interaction,
-                        and I aim to pick up a double-major in Legal Studies.</p>
-                        <p>Note this is still a massive work in progress!</p>
+                        <p><strong>This Website</strong><br />
+                        I love tinkering with things and coding somewhat by trial-and-error.  Since the early web boom, I've made and modified websites for fun, projects, and video games.  This is my personal website - a mix of code testing, information, and portfolios.  Since there are many fantastic HTML5 templates nowadays, I heavily modified this one to fit my needs.
+                        Lately, I've been using SourceTree + GitHub Pages to host it rather than traditional FTP.</p>
+                        
+                        <p><strong>Note</strong><br />
+                        This is still a work in progress - I hope to expand and clarify more of the general questions people ask!
+						</p>
+
+
 				</div>
 			</section>
 
        	<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<!-- Temporarily Removed
 					<ul class="icons">
 						<li><a href="#" class="icon fa-facebook"></a></li>
 						<li><a href="#" class="icon fa-twitter"></a></li>
 						<li><a href="#" class="icon fa-instagram"></a></li>
-                        <li><a href="#" class="icon fa-github"></a></li>
+            			<li><a href="#" class="icon fa-github"></a></li>
 						<li><a href="https://www.linkedin.com/in/tongbryan" class="icon fa-linkedin"></a></li>
 				    </ul>
+				    -->
 					<ul class="copyright">
-						<li>Copyright &copy; 2016 Bryan Tong</li>
+						<li>Testing on <a href="https://pages.github.com/" class="icon fa-github"></a> GitHub Pages</li>
+            			<li><a href="changelog.html">R4.4</a>
 						<li>Modified from: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
