--- a/bio.html
+++ b/bio.html
@@ -63,7 +63,7 @@
                         <a href="#" class="image fit"><img src="images/pic01.png" alt="Some photos of me!"/></a> 
                         <p>
                         A frequent question I get is about my ethnicity - though my last name is Chinese, 
-                        I am actually multiethnic: a mix of Chinese, Japanese, and German.
+                        I am actually multi-ethnic: a mix of Chinese, Japanese, and German.
                         I speak English and informal Japanese, though there are so many other languages I want to learn!
                         Traveling to not only embrace my roots - but to explore other cultures is a huge interest of mine.
                         I've flown a lot growing up.  I've traveled to most US states and even drove straight to Texas! Internationally, I've visited: Italy, Spain, Germany, UK, Croatia, and Japan.</p>
